Fix body width overflow issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,10 +103,6 @@ p.content{
   background-color: #5CB85C;
 }
 
-.body-wrap {
-  padding: 5px;
-}
-
 .carousel-inner > .item > img {
     margin: 0 auto;
     width: 100%;
